cmake_minimum_required(VERSION 3.10)

project(simple-queue)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

# Add the test executable and link it with hellow.c
add_executable(queue_test tests/queue_test.cpp src/queue.c)
target_link_libraries(queue_test gtest gtest_main)

# Add a test
add_test(NAME QUEUE_TEST COMMAND queue_test)